--- a/css/stili-custom.scss
+++ b/css/stili-custom.scss
@@ -46,7 +46,7 @@ h3	 {	font-size: 1.25em !important;
 html { min-height: 100%; }
 
 body {
-	font-family: 'Muli', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size:16px !important ;
 	margin: 2em;
 	width: 96%;
