--- a/css/stili-custom.css
+++ b/css/stili-custom.css
@@ -724,7 +724,7 @@ html {
   min-height: 100%; }
 
 body {
-  font-family: 'Muli', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px !important;
   margin: 2em;
   width: 96%;
