--- a/css/stili-custom.scss
+++ b/css/stili-custom.scss
@@ -1,13 +1,14 @@
 :root	{
---grey-color:		#cccccc;
+/* --grey-color:		#cccccc;
 --lightgrey-color: 	#f5f5f5;
 --darkgrey-color:  	#333333;
 --blue-color: 		#0000FF;
 --black-color: 		#000000;
 --white-color: 		#FFFFFF;
 --accent-color: 	#e63946;
---tx-accent-color: 	#dddddd;
-}
+--tx-accent-color: 	#dddddd;*/
+--font-family:		'Montserrat', sans;
+
 @import "_accordion";
 @import "_colors";
 @import "_decori";
@@ -22,8 +23,7 @@
 @import "_totop";
 @import "_ul-nav2-liv2";
 
-
-
+}
 /*   ELEMENTI HTML  */
 *	     {	box-sizing:border-box;
 					-moz-box-sizing:border-box;
@@ -46,8 +46,7 @@ h3	 {	font-size: 1.25em !important;
 html { min-height: 100%; }
 
 body {
-	font-family: 'Montserrat', sans-serif;
-	font-size:16px !important ;
+	font-family: var(--font-family);
 	margin: 2em;
 	width: 96%;
 	text-rendering: optimizeLegibility;
