--- a/css/stili-custom.scss
+++ b/css/stili-custom.scss
@@ -1,14 +1,3 @@
-:root	{
-/* --grey-color:		#cccccc;
---lightgrey-color: 	#f5f5f5;
---darkgrey-color:  	#333333;
---blue-color: 		#0000FF;
---black-color: 		#000000;
---white-color: 		#FFFFFF;
---accent-color: 	#e63946;
---tx-accent-color: 	#dddddd;*/
---font-family:		'Montserrat', sans;
-
 @import "_accordion";
 @import "_colors";
 @import "_decori";
@@ -23,7 +12,20 @@
 @import "_totop";
 @import "_ul-nav2-liv2";
 
+
+:root	{
+/* --grey-color:	#cccccc;
+--lightgrey-color: 	#f5f5f5;
+--darkgrey-color:  	#333333;
+--blue-color: 		#0000FF;
+--black-color: 		#000000;
+--white-color: 		#FFFFFF;
+--accent-color: 	#e63946;
+--tx-accent-color: 	#dddddd;
+*/
+--font-family:		'Montserrat', sans-serif;
 }
+
 /*   ELEMENTI HTML  */
 *	     {	box-sizing:border-box;
 					-moz-box-sizing:border-box;
