--- a/css/stili-custom.scss
+++ b/css/stili-custom.scss
@@ -14,12 +14,13 @@
 
 
 :root	{
-/* --grey-color:	#cccccc;
+--grey-color:	#cccccc;
 --lightgrey-color: 	#f5f5f5;
 --darkgrey-color:  	#333333;
 --blue-color: 		#0000FF;
 --black-color: 		#000000;
 --white-color: 		#FFFFFF;
+/* 
 --accent-color: 	#e63946;
 --tx-accent-color: 	#dddddd;
 */
