--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -78,7 +78,7 @@ input[type='radio']		{
 input.req {
 	color: var(--blue-color);
 	background: var(--black-color);
-	border: 2px solid var(--accent-color);
+	border: 2px solid var(--button-color);
 }
 input.titolo {
 	background: inherit;
