--- a/css/_ul-nav2-liv2.scss
+++ b/css/_ul-nav2-liv2.scss
@@ -35,7 +35,7 @@ ul.nav2 a:hover,
 ul.nav2 a:focus,                                                                        
 ul.nav2 a:active {
 	background-color: var(--lightgrey-color);
-	color: var(--accent-color);
+	color: var(--button-color);
 	text-decoration: none;
 }
 ul.nav2 li:hover ul.liv2 {
