--- a/css/stili-custom.scss
+++ b/css/stili-custom.scss
@@ -21,8 +21,8 @@
 --black-color: 		#000000;
 --white-color: 		#FFFFFF;
 /* 
---accent-color: 	#e63946;
---tx-accent-color: 	#dddddd;
+--button-color: 	#e63946;
+--tx-button-color: 	#dddddd;
 */
 --font-family:		'Montserrat', sans-serif;
 }
