--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -20,9 +20,9 @@
 
 .fb-accent {
 /* sfondo e colore accent  */
-	background-color: var(--accent-color);
-	border: 1px solid var(--accent-color);
-	color: var(--tx-accent-color);
+	background-color: var(--button-color);
+	border: 1px solid var(--button-color);
+	color: var(--tx-button-color);
 }
 
 .fb-button {
