--- a/css/_fieldset.scss
+++ b/css/_fieldset.scss
@@ -34,7 +34,7 @@ padding: 1px 0 2px;
 
 
 legend {
-	color: var(--accent-color);
+	color: var(--button-color);
 	border-bottom: none !important;
 	margin-bottom: 0px  !important;
 	padding: 0 5px;
