--- a/css/_popup.scss
+++ b/css/_popup.scss
@@ -32,7 +32,7 @@
 	padding-right:0.5rem;
 }
 .close-button:hover {
- /* color: var(--accent-color); 
+ /* color: var(--button-color); 
   background:transparent !important;*/
   border:none !important;
   }
