--- a/css/_link.scss
+++ b/css/_link.scss
@@ -5,15 +5,15 @@ display:block;
 }
 /*
 a:link {
-color: var(--bg-color);
+color: var(--pri-color);
 }
 
 a:active {
-color: var(--bg-color);
+color: var(--pri-color);
 }
 
 a:visited {
-color: var(--bg-color);
+color: var(--pri-color);
 }
 
 a:hover {
