--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,28 +1,28 @@
 /*     C O L O R I           */
 .fb-content {
 /* sfondo e colore dei testi */
-	background-color: var(--bg-color);
-	border: 1px solid var(--bg-color);
-	color: var(--tx-color);
+	background-color: var(--pri-color);
+	border: 1px solid var(--pri-color);
+	color: var(--sec-color);
 }
 .fb-primary {
 /* sfondo e colore header-footer (scuro) */
 	background-color: var(--pri-color);
 	border: 1px solid var(--pri-color);
-	color: var(--tx-pri-color);
+	color: var(--sec-color);
 }
 .fb-secondary {
 /* sfondo e colore section (chiaro) */
 	background-color: var(--sec-color);
 	border: 1px solid var(--sec-color);
-	color: var(--tx-sec-color);
+	color: var(--pri-color);
 }
 
 .fb-accent {
 /* sfondo e colore accent  */
 	background-color: var(--button-color);
 	border: 1px solid var(--button-color);
-	color: var(--tx-button-color);
+	color: var(--pri-color);
 }
 
 .fb-button {
