--- a/css/_popup.scss
+++ b/css/_popup.scss
@@ -3,7 +3,7 @@
 	position:fixed;
 	top:0px;
 	left:0px;
-	background: var(--bg-color);
+	background: var(--pri-color);
 	width:100%;
 	height:100%;
 	display:none;
