--- a/css/stili-custom.scss
+++ b/css/stili-custom.scss
@@ -22,7 +22,7 @@
 --white-color: 		#FFFFFF;
 /* 
 --button-color: 	#e63946;
---tx-button-color: 	#dddddd;
+--pri-color: 	#dddddd;
 */
 --font-family:		'Montserrat', sans-serif;
 }
@@ -87,12 +87,12 @@ float: left;
 padding-right: 0.1em;
 line-height: 1em;
 font-size: 3.5em;
-color: var(--tx-color);
+color: var(--sec-color);
 }
 
 
 Pre {
-color: var(--tx-color);
+color: var(--sec-color);
 
 line-height: 1.2em;
 margin: 0 0 0.3125em 0;
@@ -100,7 +100,7 @@ margin: 0 0 0.3125em 0;
 
 
 hr {
-color: var(--tx-color);
+color: var(--sec-color);
 }
 /* HR senza margini verticali  */
 hr.slim   {
@@ -119,7 +119,7 @@ border: 0;
 }
 
 footer {
-	background-color: var(--bg-color);
+	background-color: var(--pri-color);
 	padding: 10px;
 	border-left:1px solid var(--grey-color);
 	border-right:1px solid var(--grey-color);
@@ -145,15 +145,15 @@ float: left;
 width: 100%;
 margin: 0;
 padding: 0;
-background-color: var(--bg-color);
-border-left: 1px solid var(--bg-color);
-border-right: 1px solid var(--bg-color);
+background-color: var(--pri-color);
+border-left: 1px solid var(--pri-color);
+border-right: 1px solid var(--pri-color);
 }
 
 article {
 float: left;
 width: 100%;
-color: var(--tx-color);
+color: var(--sec-color);
 background: transparent;
 }
 
@@ -251,7 +251,7 @@ h1.toolbar	{
 	font-size:1.5em;
 	font-weight: bold;
 	margin-top: 10px;
-	color:var(--tx-pri-color);
+	color:var(--sec-color);
 }
 
 /*   ID   */
