--- a/images/_ul-nav2-liv2.scss
+++ b/images/_ul-nav2-liv2.scss
@@ -23,7 +23,7 @@ ul.nav2>li>a {
 	background: transparent;
 }
 ul.nav2 li a:hover {
-	background: var(--bg-color);
+	background: var(--pri-color);
 }
 ul.nav2 a:link,                                                                       
 ul.nav2 a:visited {
