--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -26,7 +26,7 @@
 }
 
 /* bordi per :hover */
-.fb-cacent:hover 	{
+.fb-accent:hover 	{
 	background-color: var(--tx-button-color);
 	border: 1px solid var(--tx-button-color);
 	color: var(--pri-color);
