--- a/css/_flex.scss
+++ b/css/_flex.scss
@@ -38,3 +38,8 @@
 .f-dim1		{ flex-grow:1; flex-basis:0;}		/* dimensione singola */
 .f-dim2		{ flex-grow:2; flex-basis:0;}		/* dimensione doppia  */
 .f-dim3		{ flex-grow:3; flex-basis:0;}		/* dimensione tripla  */
+
+.f-1 		{ flex: 1 ;}		/* dimensione singola */
+.f-1 		{ flex: 2 ;}		/* dimensione doppia */
+.f-1 		{ flex: 3 ;}		/* dimensione tripla */
+.f-1 		{ flex: 4 ;}		/* dimensione quadrupla */
