--- a/css/stili-custom.css
+++ b/css/stili-custom.css
@@ -370,6 +370,22 @@ legend {
   flex-basis: 0; }
 
 /* dimensione tripla  */
+.f-1 {
+  flex: 1; }
+
+/* dimensione singola */
+.f-1 {
+  flex: 2; }
+
+/* dimensione doppia */
+.f-1 {
+  flex: 3; }
+
+/* dimensione tripla */
+.f-1 {
+  flex: 4; }
+
+/* dimensione quadrupla */
 /*  form  */
 /*  MIXINS  */
 /* Stile per modificare e sovrascrivere l'aspetto degli input di Bootstrap */
