--- a/css/_img.scss
+++ b/css/_img.scss
@@ -39,3 +39,7 @@ img.img-fit	{
   width: 100%;
   object-fit: cover;
 }
+/* Ombra immagine */
+.fb-img-shadow {
+  filter: drop-shadow(10px 10px 12px rgba(0,0,0,0.50));
+}
