--- a/css/_popup.scss
+++ b/css/_popup.scss
@@ -27,7 +27,7 @@
     right: 1em;
     font-size: 2em;
     text-align: center;
-    color: var(--white-color);
+    color: var(--pri-color);
 	text-decoration:none;
 	padding-right:0.5rem;
 }
