--- a/css/_ul-nav2-liv2.scss
+++ b/css/_ul-nav2-liv2.scss
@@ -13,7 +13,7 @@ ul.nav2>li {
 	float: left;
 	margin: 0;
 	padding: 0;
-	color: var(--black-color);
+	color: var(--sec-color);
 }
 
 ul.nav2>li>a {
@@ -23,8 +23,9 @@ ul.nav2>li>a {
 	background: transparent;
 }
 ul.nav2 li a:hover {
-	background: var(--pri-color);
+	 font-weight: bold; 
 }
+
 ul.nav2 a:link,                                                                       
 ul.nav2 a:visited {
 	display: block;
