--- a/css/_ul-nav2-liv2.scss
+++ b/css/_ul-nav2-liv2.scss
@@ -17,7 +17,7 @@ ul.nav2>li {
 }
 
 ul.nav2>li>a {
-	color: var(--blue-color);
+	color: var(--sec-color);
 	border-right: 0px;
 	font-weight: normal;
 	background: transparent;
