--- a/css/stili-custom.css
+++ b/css/stili-custom.css
@@ -659,7 +659,7 @@ ul.nav2 > li {
   color: var(--sec-color); }
 
 ul.nav2 > li > a {
-  color: var(--blue-color);
+  color: var(--sec-color);
   border-right: 0px;
   font-weight: normal;
   background: transparent; }
