--- a/css/_ul-nav2-liv2.scss
+++ b/css/_ul-nav2-liv2.scss
@@ -43,7 +43,7 @@ ul.nav2 li:hover ul.liv2 {
 	display: block;
 	position: absolute;
 	z-index: 1;
-	width: 13%;
+	width: 25%;
 	padding: 0;
 	margin: 0;
 	background: var(--lightgrey-color);
@@ -55,7 +55,7 @@ ul.liv2 {
 	display: none;
 	position: absolute;
 	z-index: 1;
-	width: 13%;
+	width: 25%;
 	padding: 0;
 	margin: 0;
 	background: var(--lightgrey-color);
@@ -67,7 +67,7 @@ ul.liv2 li {
 	width: 100%;
 }
 ul.liv2>li>a {
-	color: var(--white-color);
-	border: 1px solid var(--sec-color);
-	background: var(--sec-color);
+	color: var(--sec-color);
+	border: 1px solid var(--pri-color);
+	background: var(--pri-color);
 }
