--- a/css/_ul-nav2-liv2.scss
+++ b/css/_ul-nav2-liv2.scss
@@ -59,6 +59,7 @@ ul.liv2 {
 	padding: 0;
 	margin: 0;
 	background: var(--lightgrey-color);
+	font-weight: normal;
 }
 ul.liv2 li {
 	list-style: none;
