--- a/css/_ul-nav2-liv2.scss
+++ b/css/_ul-nav2-liv2.scss
@@ -47,6 +47,7 @@ ul.nav2 li:hover ul.liv2 {
 	padding: 0;
 	margin: 0;
 	background: var(--lightgrey-color);
+	opacity: 80%;
 }
 
 /*       UL-LIV2           */
