--- a/css/stili-custom.css
+++ b/css/stili-custom.css
@@ -687,7 +687,8 @@ ul.nav2 li:hover ul.liv2 {
   width: 20%;
   padding: 0;
   margin: 0;
-  background: var(--lightgrey-color); }
+  background: var(--lightgrey-color);
+  opacity: 80%; }
 
 /*       UL-LIV2           */
 ul.liv2 {
